; ModuleID = '/home/carl/AnghaBench/linux/fs/gfs2/extr_lock_dlm.c_control_lvb_write.c'
source_filename = "/home/carl/AnghaBench/linux/fs/gfs2/extr_lock_dlm.c_control_lvb_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lm_lockstruct = type { i32 }

@GDLM_LVB_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lm_lockstruct*, i32, i8*)* @control_lvb_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @control_lvb_write(%struct.lm_lockstruct* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.lm_lockstruct*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8, align 1
  store %struct.lm_lockstruct* %0, %struct.lm_lockstruct** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = load %struct.lm_lockstruct*, %struct.lm_lockstruct** %4, align 8
  %9 = getelementptr inbounds %struct.lm_lockstruct, %struct.lm_lockstruct* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = load i32, i32* @GDLM_LVB_SIZE, align 4
  %13 = call i32 @memcpy(i32 %10, i8* %11, i32 %12)
  %14 = load i32, i32* %5, align 4
  %15 = call signext i8 @cpu_to_le32(i32 %14)
  store i8 %15, i8* %7, align 1
  %16 = load %struct.lm_lockstruct*, %struct.lm_lockstruct** %4, align 8
  %17 = getelementptr inbounds %struct.lm_lockstruct, %struct.lm_lockstruct* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @memcpy(i32 %18, i8* %7, i32 1)
  ret void
}

declare dso_local i32 @memcpy(i32, i8*, i32) #1

declare dso_local signext i8 @cpu_to_le32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
